# backend-example

./: .gitignore  README.md  arch.drawio  ddd-arch.drawio
backend-example-python/: .env  README.md  pyproject.toml
backend-example-python/src/: accessor.py  config.py  ioc_container.py  main.py
backend-example-python/src/application/: application_config.py  user_auth_service.py  user_dto.py  user_manage_service.py  user_profile_service.py  user_query_handler.py  user_query_sort.py
backend-example-python/src/domain/: sms_gateway.py  user.py  user_repository.py
backend-example-python/src/utility/: crypto_utility.py  json_utility.py  utility_exception.py  value_utility.py
backend-example-python/test/http/: admin-login.http  admin-user-create-modify-remove.http  test-crypto.http  test-exception.http  test-lock.http  test-response-code.http  test-response-json.http  test-value.http  use-not-login.http  user-register-login-profile.http
python/: .env  .gitignore  README.md  pyproject.toml
python/app/: config.py  ioc_container.py  main.py
python/app/application/: application_exception.py  id_generator.py  user_auth_service.py  user_dto.py  user_manage_service.py  user_profile_service.py  user_query_criteria.py  user_query_handler.py  user_query_sort.py
python/app/domain/: domain_exception.py  sms_gateway.py  user.py  user_repository.py  user_unique_checker.py
python/bak/: user_persistence_adapter.py.bak  user_query_handler.py.bak  user_repository.py.bak  user_unique_checker.py.bak
python/src/: config.py  ioc_container.py  main.py
python/src/domain/: user.py  (+4 more)
(+441 files in other folders)
