[project]
name = "backend-example-python"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.123.9",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-jose>=3.5.0",
    "redis>=7.1.0",
    "types-python-jose>=3.5.0.20250531",
    "uuid-utils>=0.12.0",
    "uvicorn>=0.38.0",
]
# last dependency upgrade 20251205
